modify index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello world
+<html lang="ja">
+<head>
+  <meta charset="utf-8">
+  <title>インデックス</title>
+</head>
+<body>
+  <h1> 雑多お試しページ</h1>
+</body>
+</html>
