--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>インデックス</title>
+  <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
   <h1> 雑多お試しページ</h1>
