--- a/pc.html
+++ b/pc.html
@@ -8,13 +8,13 @@
   </style>
   <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
 </head>
-<body class="index">
-  <h1>インデックスページ</h1>
+<body class="pc">
+  <h1>for PC</h1>
   <ul>
     <li><a href="pc.html">PC</a></li>
     <li><a href="fp-d.html">FP-d</a></li>
     <li><a href="fp-a.html">FP-a</a></li>
-    <li><a href="fp-s.html">FP-s</a></li>
+    <li><a href="fp-i.html">FP-s</a></li>
     <li><a href="sp-i.html">SP-i</a></li>
     <li><a href="sp-a.html">SP-a</a></li>
   </ul>
