--- a/sp-i.html
+++ b/sp-i.html
@@ -1,15 +1,15 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>インデックス</title>
+  <title>for SP-i</title>
   <link rel="stylesheet" href="main.css"/>
   <style type="text/css">
 
   </style>
   <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
 </head>
-<body class="index">
-  <h1>インデックスページ</h1>
+<body class="sp-i">
+  <h1>for SP-i</h1>
   <ul>
     <li><a href="pc.html">PC</a></li>
     <li><a href="fp-d.html">FP-d</a></li>
