add showing cookies

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="ja">
+<html lang="ja" manifest="no-cache.appcache">
 <head>
   <meta charset="utf-8">
   <title>インデックス</title>
@@ -7,6 +7,7 @@
 
   </style>
   <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
+  <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
 </head>
 <body class="index">
   <h1>インデックスページ</h1>
@@ -18,5 +19,7 @@
     <li><a href="sp-i.html">SP-i</a></li>
     <li><a href="sp-a.html">SP-a</a></li>
   </ul>
+  <dl id="cookies"></dl>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
