--- a/fp-a.html
+++ b/fp-a.html
@@ -1,4 +1,4 @@
-<html lang="ja">
+<html lang="ja" manifest="no-cache.appcache">
 <head>
   <meta charset="utf-8">
   <title>for FP-a</title>
@@ -7,10 +7,12 @@
 
   </style>
   <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
+  <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
 </head>
 <body class="fp-a">
   <h1>for FP-a</h1>
   <ul>
+    <li><a href="index.html">インデックス</a></li>
     <li><a href="pc.html">PC</a></li>
     <li><a href="fp-d.html">FP-d</a></li>
     <li><a href="fp-a.html">FP-a</a></li>
@@ -18,5 +20,7 @@
     <li><a href="sp-i.html">SP-i</a></li>
     <li><a href="sp-a.html">SP-a</a></li>
   </ul>
+  <dl id="cookies"></dl>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
