--- a/pc.html
+++ b/pc.html
@@ -1,4 +1,4 @@
-<html lang="ja">
+<html lang="ja" manifest="no-cache.appcache">
 <head>
   <meta charset="utf-8">
   <title>インデックス</title>
@@ -7,16 +7,20 @@
 
   </style>
   <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
+  <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
 </head>
 <body class="pc">
   <h1>for PC</h1>
   <ul>
+    <li><a href="index.html">インデックス</a></li>
     <li><a href="pc.html">PC</a></li>
     <li><a href="fp-d.html">FP-d</a></li>
     <li><a href="fp-a.html">FP-a</a></li>
-    <li><a href="fp-i.html">FP-s</a></li>
+    <li><a href="fp-s.html">FP-s</a></li>
     <li><a href="sp-i.html">SP-i</a></li>
     <li><a href="sp-a.html">SP-a</a></li>
   </ul>
+  <dl id="cookies"></dl>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
