--- a/sp-a.html
+++ b/sp-a.html
@@ -1,6 +1,7 @@
 <html lang="ja" manifest="no-cache.appcache">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>for SP-a</title>
   <link rel="stylesheet" href="main.css"/>
   <style type="text/css">
