add session and conversion tags

--- a/index.html
+++ b/index.html
@@ -13,12 +13,24 @@
 <body class="index">
   <h1>インデックスページ</h1>
   <ul>
-    <li><a href="pc.html">PC</a></li>
-    <li><a href="fp-d.html">FP-d</a></li>
+    <li><a href="pc.html">PC</a>
+      （<a href="pc-ses.html">ses あり</a> |
+        <a href="pc-cv.html">cv あり</a> |
+        <a href="pc-ses-cv.html">ses,cv あり</a>）
+    </li>
+    <li><a href="sp-i.html">SP-i</a>
+      （<a href="sp-i-ses.html">ses あり</a> |
+        <a href="sp-i-cv.html">cv あり</a> |
+        <a href="sp-i-ses-cv.html">ses,cv あり</a>）
+    </li>
+    <li><a href="sp-a.html">SP-a</a>
+      （<a href="sp-a-ses.html">ses あり</a> |
+        <a href="sp-a-cv.html">cv あり</a> |
+        <a href="sp-a-ses-cv.html">ses,cv あり</a>）
+    </li>
+    <!--<li><a href="fp-d.html">FP-d</a></li>
     <li><a href="fp-a.html">FP-a</a></li>
-    <li><a href="fp-s.html">FP-s</a></li>
-    <li><a href="sp-i.html">SP-i</a></li>
-    <li><a href="sp-a.html">SP-a</a></li>
+    <li><a href="fp-s.html">FP-s</a></li>-->
   </ul>
   <dl id="cookies"></dl>
   <script type="text/javascript" src="main.js"></script>
