--- a/sp-a-cv.html
+++ b/sp-a-cv.html
@@ -14,6 +14,7 @@
   <h1>for SP-a</h1>
   <h2 class="cv">コンバージョンタグあり</h2>
   <img src="//spitz2.ra9.jp/p/cv/1f">
+  <img src="//spitz2.ra9.jp/p/cv/1g">
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
