--- a/pc-cv.html
+++ b/pc-cv.html
@@ -13,7 +13,7 @@
 <body class="pc">
   <h1>for PC</h1>
   <h2 class="cv">コンバージョンタグあり</h2>
-  <img src="//spitz2.ra9.jp/p/cv/1f">
+  <img src="//rev.ra9.jp/p/cv/5IT">
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
