--- a/sp-i-cv.html
+++ b/sp-i-cv.html
@@ -13,7 +13,7 @@
 <body class="sp-i">
   <h1>for SP-i</h1>
   <h2 class="cv">コンバージョンタグあり</h2>
-  <img src="//spitz2.ra9.jp/p/cv/1f">
+  <img src="//rev.ra9.jp/p/cv/5IS">
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
