--- a/pc-ses-cv.html
+++ b/pc-ses-cv.html
@@ -13,8 +13,8 @@
 <body class="pc">
   <h1>for PC</h1>
   <h2 class="ses-cv">セッション＋コンバージョンタグあり</h2>
-  <img src="//spitz2.ra9.jp/p/ses/1f">
-  <img src="//spitz2.ra9.jp/p/cv/1f">
+  <img src="//rev.ra9.jp/p/ses/5IT">
+  <img src="//rev.ra9.jp/p/cv/5IT">
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
