--- a/sp-a-cv.html
+++ b/sp-a-cv.html
@@ -13,7 +13,7 @@
 <body class="sp-a">
   <h1>for SP-a</h1>
   <h2 class="cv">コンバージョンタグあり</h2>
-  <img src="//spitz2.ra9.jp/p/cv/1f">
+  <img src="//rev.ra9.jp/p/cv/5IS">
   <img src="//spitz2.ra9.jp/p/cv/1g">
   <ul>
     <li><a href="pc.html">PC</a>
