--- a/sp-a-ses-cv.html
+++ b/sp-a-ses-cv.html
@@ -13,8 +13,8 @@
 <body class="sp-a">
   <h1>for SP-a</h1>
   <h2 class="ses-cv">セッション＋コンバージョンタグあり</h2>
-  <img src="//spitz2.ra9.jp/p/ses/1f">
-  <img src="//spitz2.ra9.jp/p/cv/1f">
+  <img src="//rev.ra9.jp/p/ses/5IS">
+  <img src="//rev.ra9.jp/p/cv/5IS">
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
