--- a/fp-s.html
+++ b/fp-s.html
@@ -7,8 +7,8 @@
   <style type="text/css">
 
   </style>
-  <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
-  <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
+  <script src="//rev.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
+  <script src="//rev.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
 </head>
 <body class="fp-s">
   <h1>for FP-s</h1>
