--- a/sp-a-cv.html
+++ b/sp-a-cv.html
@@ -7,14 +7,14 @@
   <style type="text/css">
 
   </style>
-  <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
-  <script src="//spitz2.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
+  <script src="//rev.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
+  <script src="//rev.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
 </head>
 <body class="sp-a">
   <h1>for SP-a</h1>
   <h2 class="cv">コンバージョンタグあり</h2>
   <img src="//rev.ra9.jp/p/cv/5IS">
-  <img src="//spitz2.ra9.jp/p/cv/1g">
+  <img src="//rev.ra9.jp/p/cv/1g">
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
