--- a/pc-ses-cv.html
+++ b/pc-ses-cv.html
@@ -15,6 +15,8 @@
   <h2 class="ses-cv">セッション＋コンバージョンタグあり</h2>
   <img src="//rev.ra9.jp/p/ses/5IT">
   <img src="//rev.ra9.jp/p/cv/5IT">
+  <iframe src="//rev.ra9.jp/p/ses/5IT" width="0" height="0"></iframe>
+  <iframe src="//rev.ra9.jp/p/cv/5IT" width="0" height="0"></iframe>
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
