--- a/pc-cv.html
+++ b/pc-cv.html
@@ -13,8 +13,8 @@
 <body class="pc">
   <h1>for PC</h1>
   <h2 class="cv">コンバージョンタグあり</h2>
-  <img src="//rev.ra9.jp/p/cv/5IT">
-  <iframe src="//rev.ra9.jp/p/cv/5IT" width="0" height="0"></iframe>
+
+  <iframe src="//rev.ra9.jp/p/frame/cv/5IT" width="0" height="0"></iframe>
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
