--- a/pc-ses.html
+++ b/pc-ses.html
@@ -13,7 +13,9 @@
 <body class="pc">
   <h1>for PC</h1>
   <h2 class="ses">セッションタグあり</h2>
-  <img src="//rev.ra9.jp/p/ses/5IT">
+  <iframe src="//rev.ra9.jp/p/frame/ses/5IT" width="0" height="0"></iframe>
+
+
   <iframe src="//rev.ra9.jp/p/ses/5IT" width="0" height="0"></iframe>
   <ul>
     <li><a href="pc.html">PC</a>
