--- a/sp-i-ses.html
+++ b/sp-i-ses.html
@@ -13,7 +13,9 @@
 <body class="sp-i">
   <h1>for SP-i</h1>
   <h2 class="ses">セッションタグあり</h2>
-  <img src="//rev.ra9.jp/p/ses/5IS">
+  <iframe src="//rev.ra9.jp/p/frame/ses/5IS" width="0" height="0"></iframe>
+
+
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
