--- a/sp-a-cv.html
+++ b/sp-a-cv.html
@@ -13,8 +13,8 @@
 <body class="sp-a">
   <h1>for SP-a</h1>
   <h2 class="cv">コンバージョンタグあり</h2>
-  <img src="//rev.ra9.jp/p/cv/5IS">
-  <img src="//rev.ra9.jp/p/cv/1g">
+  <iframe src="//rev.ra9.jp/p/frame/cv/5IS" width="0" height="0"></iframe>
+
   <ul>
     <li><a href="pc.html">PC</a>
       （<a href="pc-ses.html">ses あり</a> |
