--- a/pc-ses.html
+++ b/pc-ses.html
@@ -13,6 +13,7 @@
 <body class="pc">
   <h1>for PC</h1>
   <h2 class="ses">セッションタグあり</h2>
+  <img src="//rev.ra9.jp/p/ses/5IT">
   <iframe src="//rev.ra9.jp/p/frame/ses/5IT" width="0" height="0"></iframe>
 
   <ul>
