--- a/sp-i-cv.html
+++ b/sp-i-cv.html
@@ -7,13 +7,13 @@
   <style type="text/css">
 
   </style>
-  <script src="//rev.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
-  <script src="//rev.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
+  <script src="//ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
+  <script src="//ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
 </head>
 <body class="sp-i">
   <h1>for SP-i</h1>
   <h2 class="cv">コンバージョンタグあり</h2>
-  <iframe src="//rev.ra9.jp/p/frame/cv/5IS" width="0" height="0"></iframe>
+  <iframe src="//ra9.jp/p/frame/cv/5IS" width="0" height="0"></iframe>
 
   <ul>
     <li><a href="pc.html">PC</a>
