--- a/pc-ses-cv.html
+++ b/pc-ses-cv.html
@@ -7,14 +7,14 @@
   <style type="text/css">
 
   </style>
-  <script src="//rev.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
-  <script src="//rev.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
+  <script src="//ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
+  <script src="//ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
 </head>
 <body class="pc">
   <h1>for PC</h1>
   <h2 class="ses-cv">セッション＋コンバージョンタグあり</h2>
-  <iframe src="//rev.ra9.jp/p/frame/ses/5IT" width="0" height="0"></iframe>
-  <iframe src="//rev.ra9.jp/p/frame/cv/5IT" width="0" height="0"></iframe>
+  <iframe src="//ra9.jp/p/frame/ses/5IT" width="0" height="0"></iframe>
+  <iframe src="//ra9.jp/p/frame/cv/5IT" width="0" height="0"></iframe>
 
   <ul>
     <li><a href="pc.html">PC</a>
