--- a/sp-a.html
+++ b/sp-a.html
@@ -7,8 +7,8 @@
   <style type="text/css">
 
   </style>
-  <script src="//rev.ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
-  <script src="//rev.ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
+  <script src="//ra9.jp/assets/js/vendors/jquery.min.js" type="text/javascript"></script>
+  <script src="//ra9.jp/assets/js/vendors/jquery.cookie.min.js" type="text/javascript"></script>
 </head>
 <body class="sp-a">
   <h1>for SP-a</h1>
